gcc/testsuite/rust/rustc/ui/suggestions/issue-71394-no-from-impl.rs
fn main() {
    let data: &[u8] = &[0; 10];
    let _: &[i8] = data.into();
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

